--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,34 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const checkSome19 = people.some((item)=>{
+      return (2026 - item.year) >= 19;
+    })
+    console.log(checkSome19)
+
     // Array.prototype.every() // is everyone 19 or older?
+    const checkAll19 = people.every((item)=>{
+      return (2026 - item.year) >= 19;
+    })
+    console.log(checkAll19)
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const findId823423 = comments.find((item)=>{
+      return item.id == 823423;
+    })
+    console.log(findId823423)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const indexId823423 = comments.findIndex((item)=>{
+      return item.id == 823423;
+    })
+    console.log(indexId823423);
+    comments.splice(indexId823423,1);
+    console.log(comments);
 
   </script>
 </body>
